--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/cursorTail.css">
-        <link rel="stylesheet" href="/css/daynight.css">
-        <link rel="stylesheet" href="/css/titleText.css">
-        <link rel="stylesheet" href="/css/tooltip.css">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/responsive.css">
-        <link rel="stylesheet" href="/css/navbar.css">
+        <link rel="stylesheet" href="./css/cursorTail.css">
+        <link rel="stylesheet" href="./css/daynight.css">
+        <link rel="stylesheet" href="./css/titleText.css">
+        <link rel="stylesheet" href="./css/tooltip.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/responsive.css">
+        <link rel="stylesheet" href="./css/navbar.css">
         <title>Welcome, I'm Haojie Cai</title>
-        <link rel="icon" type="image/png" href="/imgs/steam.png">
+        <link rel="icon" type="image/png" href="./imgs/steam.png">
     </head>
     <body>
         <nav class="navbar">
             <div class="nav-content">
                 <a href="#" class="nav-link active">Home</a>
-                <a href="/projects.html" class="nav-link">Projects</a>
+                <a href="./projects.html" class="nav-link">Projects</a>
             </div>
             <label class="theme-switch">
                 <input type="checkbox" class="theme-switch__checkbox">
@@ -69,7 +69,7 @@
             <div class="profile-content">
                 <div class="profile-left">
                     <div class="profile-photo">
-                        <img src="/imgs/photo.jpg" alt="Haojie Cai" style="border-radius: 50%;" width="200">
+                        <img src="./imgs/photo.jpg" alt="Haojie Cai" style="border-radius: 50%;" width="200">
                     </div>
                     <div class="profile-basic-info">
                         <h1>Haojie Cai</h1>
@@ -159,11 +159,11 @@
             This website is still in development. Thank you for your patience!
         </div>
 
-        <script src="/js/titleText.js"></script>
-        <script src="/js/mouseScript.js"></script>
-        <script src="/js/lineScript.js"></script>
-        <script type="module" src="/js/projects.js"></script>
-        <script src="/js/script.js"></script>
+        <script src="./js/titleText.js"></script>
+        <script src="./js/mouseScript.js"></script>
+        <script src="./js/lineScript.js"></script>
+        <script type="module" src="./js/projects.js"></script>
+        <script src="./js/script.js"></script>
         
     </body>
 </html>
