--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/cursorTail.css">
-        <link rel="stylesheet" href="./css/daynight.css">
-        <link rel="stylesheet" href="./css/titleText.css">
-        <link rel="stylesheet" href="./css/tooltip.css">
-        <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css/responsive.css">
-        <link rel="stylesheet" href="./css/navbar.css">
+        <link rel="stylesheet" href="/css/cursorTail.css">
+        <link rel="stylesheet" href="/css/daynight.css">
+        <link rel="stylesheet" href="/css/titleText.css">
+        <link rel="stylesheet" href="/css/tooltip.css">
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/responsive.css">
+        <link rel="stylesheet" href="/css/navbar.css">
         <title>Welcome, I'm Haojie Cai</title>
-        <link rel="icon" type="image/png" href="./imgs/steam.png">
+        <link rel="icon" type="image/png" href="/imgs/steam.png">
     </head>
     <body>
         <nav class="navbar">
             <div class="nav-content">
                 <a href="#" class="nav-link active">Home</a>
-                <a href="./projects.html" class="nav-link">Projects</a>
+                <a href="/projects.html" class="nav-link">Projects</a>
             </div>
             <label class="theme-switch">
                 <input type="checkbox" class="theme-switch__checkbox">
@@ -54,7 +54,7 @@
         </section>
 
         <div class="profile-container">
-            <div class="rotating-text">
+            <div class="rotating-text" style="text-align: left; width: 100%; padding: 0; margin-left: -20px;">
                 <p class="text-to-toggle">
                     Greetings, and welcome to my world of</p>
                 <p class="text-to-animation">
@@ -69,11 +69,9 @@
             <div class="profile-content">
                 <div class="profile-left">
                     <div class="profile-photo">
-                        <img src="./imgs/photo.jpg" alt="Haojie Cai" style="border-radius: 50%;" width="200">
+                        <img src="/imgs/photo.jpg" alt="Haojie Cai" style="border-radius: 50%;" width="200">
                     </div>
                     <div class="profile-basic-info">
-                        <h1>Haojie Cai</h1>
-                        <h2>New York University</h2>
                         <div class="social-links">
                             <a href="https://www.linkedin.com/in/haojiecai/" class="social-link">
                                 <svg class="social-icon linkedin" viewBox="0 0 448 512">
@@ -97,7 +95,7 @@
                                 </svg>
                                 <span>GitHub</span>
                             </a>
-                            <a href="./Haojie_Cai_Resume.pdf" class="social-link" download>
+                            <a href="/Haojie_Cai_Resume.pdf" class="social-link" download>
                                 <svg class="social-icon resume" viewBox="0 0 384 512">
                                     <path d="M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM216 232V334.1l31-31c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-72 72c-9.4 9.4-24.6 9.4-33.9 0l-72-72c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l31 31V232c0-13.3 10.7-24 24-24s24 10.7 24 24z"/>
                                 </svg>
@@ -152,18 +150,15 @@
             </div>
         </div>
 
-        <!-- <canvas class="webgl"></canvas> -->
-        <!-- <div class="scroll-space"></div> -->
-
         <div class="alarm" id="alarmMessage">
             This website is still in development. Thank you for your patience!
         </div>
 
-        <script src="./js/titleText.js"></script>
-        <script src="./js/mouseScript.js"></script>
-        <script src="./js/lineScript.js"></script>
-        <script type="module" src="./js/projects.js"></script>
-        <script src="./js/script.js"></script>
+        <script src="/js/titleText.js"></script>
+        <script src="/js/mouseScript.js"></script>
+        <script src="/js/lineScript.js"></script>
+        <script type="module" src="/js/projects.js"></script>
+        <script src="/js/script.js"></script>
         
     </body>
 </html>
